add bus data dump to devtools
